# rank-bot

./: .gitignore  README.md  pyproject.toml
src/: agents_factory.py  config.py  main.py  models.py  prompts.py  scoring.py  tools.py
