[project]
name = "rank-bot"
version = "0.1.0"
description = "AI Agent for judging hackathon submissions"
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "openai>=2.21.0",
    "openai-agents>=0.9.0",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = []

[project.scripts]
rank-bot = "rank_bot.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
